Realizados los cambios e incorporación de ficheros con jasper studio